# ai-real-world-apps

./: README.md  pyproject.toml
notes/m1/: 202501071916.md
